Updated faq (no message)

--- a/faq.txt
+++ b/faq.txt
@@ -17,8 +17,13 @@ The Official SCP Foundation FAQ
 
 **What is procedure 110-Montauk?** An amateur shadowcast of the Rocky Horror picture Show.
 
-**What, really?** Well, no, probably not. But, see, that's the point of expungement and redaction, you can fill in your own answer!
+**What, really?** Well, no, probably not. But, see, that's the point of expungement and redaction, you can fill in your own answer! Whatever is done to that poor girl, is ENTIRELY your fault, because you made it up.
 
+**But it involves rape, right?** No.
+
+**Oh, good!** It's worse then that. Rape would be gentle compared to what they actually do. Hope that helps you sleep at night!
+
+**173 is totally based on the weeping angels, right?** No, actually! 173 came out a couple of months before the weeping angels. 
 
 //If you've read the required reading, make sure to include the words 'Yellow Snow' in your application, along with the required content and the other passwords.//
 
@@ -41,3 +46,5 @@ About the only thing that IS canon is how certain characters act. Gears has no e
 **What happened to SCP-XXX?** See the [[[Deletions Guide]]].
 
 **How should I react when people tell me to shut up or stop?** Shut up. Or Stop. Seriously.
+
+**I could use some pictures to inspire me. Y'got anything?** Right [[[http://scp-wiki.wikidot.com/composite-sketches-illustrations-and-photographs |here!]]]
