Updated faq (no message)

--- a/faq.txt
+++ b/faq.txt
@@ -25,7 +25,7 @@ The Official SCP Foundation FAQ
 
 **173 is totally based on the weeping angels, right?** No, actually! 173 came out a couple of months before the weeping angels. 
 
-//If you've read the required reading, make sure to include the words 'Yellow Snow' in your application, along with the required content and the other passwords.//
+//If you've read the required reading, make sure to include the words 'Twisted Fire' in your application, along with the required content and the other passwords.//
 
 **My application has been rejected and I... uhm.. The paragraph directly above this one is probably why, isn't it?** Yup. No password, no join. It's not a joke.
 
@@ -48,3 +48,5 @@ About the only thing that IS canon is how certain characters act. Gears has no e
 **How should I react when people tell me to shut up or stop?** Shut up. Or Stop. Seriously.
 
 **I could use some pictures to inspire me. Y'got anything?** Right [[[http://scp-wiki.wikidot.com/composite-sketches-illustrations-and-photographs |here!]]]
+
+**There sure are a lot of facilities and Mobile task forces. Where can I find a list of them?** Well, there is no TRUE master list. We started listing them, but then there got to be SO many, we just said 'fuck it. ' What we have is [[[secure-facilities-locations |Facilities]]] and [[[task-forces |Task Forces]]].
