Updated faq (no message)

--- a/faq.txt
+++ b/faq.txt
@@ -50,3 +50,5 @@ About the only thing that IS canon is how certain characters act. Gears has no e
 **I could use some pictures to inspire me. Y'got anything?** Right [[[http://scp-wiki.wikidot.com/composite-sketches-illustrations-and-photographs |here!]]]
 
 **There sure are a lot of facilities and Mobile task forces. Where can I find a list of them?** Well, there is no TRUE master list. We started listing them, but then there got to be SO many, we just said 'fuck it. ' What we have is [[[secure-facilities-locations |Facilities]]] and [[[task-forces |Task Forces]]].
+
+**So I have this great idea to make an article better, I can just dive in and change whatever I want, right?** Absolutely not. While this is a wiki, we're a little bit more strict on who can edit what then most wikis. Spelling is generally okay. Grammar... if it's something that doesn't change intent, it's okay, but not everyone has perfect grammar. Adding, taking away, or otherwise altering any article is not okay, without consent from the author or senior staff if the author is missing.
