--- a/faq.txt
+++ b/faq.txt
@@ -3,6 +3,10 @@ The Official SCP Foundation FAQ
 
 **Why was the old FAQ Deleted?** It was getting unwieldy, so I figured I'd start again, see if I could slim it up some.
 
+**What is the Foundation?** We are the last bastion of security in a world where the natural laws quite quickly break down. We are here to protect humanity from the things that go bump in the night, from people who wield power beyond mortal understanding, and in general, to make the world a safer place. We are the holders of wonders, and the crafters of dreams. We are why the world continues. In the short form, we're a creative writing site, devoted towards horror.
+
+**What does SCP stand for?** Secure Containment Protocols. Sure, it's not the most original of names, but it's what we got stuck with. That's generally why we go with the Foundation.
+
 **How do I upload images?** Well, that info IS in the Newbie Guide, but since you asked: Go down to the bottom of the page where it says files, click upload a file from your computer, and go from there.
 
 **What are some things that generally cause an article to accumulate downvotes?** That's like asking how many grains of sand are on a beach. Everyone has a different reason for downvoting. But, some simple reasons: Bad grammar, poor writing, doing something that's already an SCP, or failing to write in the tone of the Foundation.
