faq: New FAQ is live, tentatively approved by Troy, final approval Mann&Bright.

--- a/faq.txt
+++ b/faq.txt
@@ -1,58 +1,191 @@
 title:FAQ
-The Official SCP Foundation FAQ
+[[tabview]]
+[[tab The Site]]
++++ The Site
 
-**Why was the old FAQ Deleted?** It was getting unwieldy, so I figured I'd start again, see if I could slim it up some.
+**Is this real?** No. This is a collaborative writing website.
 
-**What is the Foundation?** We are the last bastion of security in a world where the natural laws quite quickly break down. We are here to protect humanity from the things that go bump in the night, from people who wield power beyond mortal understanding, and in general, to make the world a safer place. We are the holders of wonders, and the crafters of dreams. We are why the world continues. In the short form, we're a creative writing site, devoted towards horror.
+**What is [[[http://scp-wiki.wikidot.com/|the Foundation]]]?** We are the last bastion of security in a world where natural laws rapidly break down. We are here to protect humanity from the things that go bump in the night, from people who wield power beyond mortal understanding. We are here to make the world a safer place. We are the holders of wonders, and the crafters of dreams. We are why the world continues. In the short form, we're a creative writing site, devoted towards horror.
 
-**What does SCP stand for?** Secure Containment Protocols. Sure, it's not the most original of names, but it's what we got stuck with. That's generally why we go with the Foundation.
+**What does SCP stand for?** "Special Containment Procedures". We generally go with "the Foundation". It also stands for the site motto: "Secure. Contain. Protect."
 
-**How do I upload images?** Well, that info IS in the Newbie Guide, but since you asked: Go down to the bottom of the page where it says files, click upload a file from your computer, and go from there.
+**How long has this site been around, anyway?** Read this [[[http://scp-wiki.wikidot.com/forum/t-228926/site-history|forum post]]] for details. Basically, the original SCP ([[[SCP-173]]]) was written back in 2007, the first incarnation of this wiki (on editthis.info) was made in early 2008, and we moved to Wikidot in the middle of that year.
 
-**What are some things that generally cause an article to accumulate downvotes?** That's like asking how many grains of sand are on a beach. Everyone has a different reason for downvoting. But, some simple reasons: Bad grammar, poor writing, doing something that's already an SCP, or failing to write in the tone of the Foundation.
+**Have the owners of the wiki ever considered expanding their universe to other media (television, film, podcasts, etc.)?** Ugh, yes, and if we hadn't had the idea on our own, plenty of others have mentioned it to us. Licensing is an issue; we have debates about the implications of Creative Commons almost weekly now, especially now that SCP: Containment Breach is getting so big. We honestly prefer that you didn't, at least not without contacting the authors or staff.
 
-**How do I familiarize myself with the site?** Uhm. Read it? No, seriously, go through, and read as many SCPs and tales as you can, it's the easiest way.
+**Should I join if I don't want to write an SCP?** That depends on whether you want to vote, join in on the discussions, or edit existing articles. We've got some people who have been in chat for years, and still haven't bothered to join the site. We've also got huge fans who just don't want to actually get involved. You don't need to join to read the discussion threads, as they are now open for all to read.
 
-**Why does the Foundation keep this SCP around? Why don't they just destroy/kill it?** Well, for starters, if you've read our logo, you know SCP stands for Secure, Contain, Protect, not Destroy, Destroy, Destroy. That said, if we destroyed everything, we wouldn't have much of a site, would we? In character… suspension of disbelief. Make something up, if it's good, it might be used.
+**Is this a roleplaying site?** No. While many writers appear to have characters, or avatars on the site, these are really just characters we've created for the various stories and articles. Although many of us share common names with these characters, that's just because those are our user-names. It's easier that way, and allows for our younger members to feel safer in anonymity. A good rule of thumb is that Dr/Agent/Whatever (Name) is the character, while (Name) is the writer.
 
-**What are these -D, -ARC, and -EX SCPs that people keep talking about?** -D are Decommissioned SCPs, ones that were so bad, we had to write stories about their destruction. -ARC are archived SCPs, ones that were used in good stories, or that the old hands think of favorably, but that have drifted into the negatives, due to changing standards. -EX, which i wish there were more of, are explained SCPs, ones that no longer stand out as unusual in this world.
+**Can I roleplay anyway?** Not on the main wiki. The site is out-of-character only. RPing can be done elsewhere; ask around for details.
 
-**What are all those [Redacted] and [Data Expunged] that are everywhere?** They are information removed from the article, generally in order to make it scarier.  While most writers know what is behind the removal, they are unwilling to tell. It's a lot worse when you have to imagine what it is.
+**What if I just write myself as a character?** You can; it's pretty common. Keep in mind that self-inserts are automatically judged negatively until the quality of the character is established. Over the top avatars are typically not thought of very well around here anymore, in spite of whatever older material you may have read. This goes double for avatars who are supposed to be funny or awesome or your idealized self. (Google "Mary Sue", or go [[[http://tvtropes.org/pmwiki/pmwiki.php/Main/MarySue|here]]] - warning, TVTropes link.)
 
-**What is procedure 110-Montauk?** An amateur shadowcast of the Rocky Horror picture Show.
+**How do I get to know the SCP foundation better?** Read as many SCPs and tales as you can. Seriously, that's the easiest way.
 
-**What, really?** Well, no, probably not. But, see, that's the point of expungement and redaction, you can fill in your own answer! Whatever is done to that poor girl, is ENTIRELY your fault, because you made it up.
+**What are all those [REDACTED] and [DATA EXPUNGED] that are everywhere?** They are information removed from the article, generally in order to make it scarier.  While most writers know what is behind the removal, they are unwilling to tell. It's a lot worse when you have to imagine what it is. Note: Don't redact information (besides site locations) in the containment procedures. In-universe, all information in containment procedures must be available to all Foundation personnel, in case they need to contain the SCP object and these procedures are all they have. 
 
-**But it involves rape, right?** No.
+**Why does the Foundation keep this SCP around? Why don't they just destroy/kill it?** Well, for starters, if you've read our motto, you know SCP stands for Secure, Contain, Protect, not Destroy, Destroy, Destroy. Most of the objects and people the Foundation houses are being kept for study, which is not at all the same as sitting on death row. Why obliterate something when you have enough resources to try to discover how it works? (That said, if we destroyed everything, we wouldn't have much of a site, would we?)
 
-**Oh, good!** It's worse then that. Rape would be gentle compared to what they actually do. Hope that helps you sleep at night!
+**Why am I being asked for my password?** No one on staff will **ever** ask you for your password. If you think that's what they're asking for, you might want to read again.
+[[/tab]]
 
-**173 is totally based on the weeping angels, right?** No, actually! 173 came out a couple of months before the weeping angels. 
+[[tab SCPs]]
++++ SCPs
 
-//If you've read the required reading, make sure to include the words 'Twisted Fire' in your application, along with the required content and the other passwords.//
+**I got an idea for an SCP! What do I do?** The [[[How to Write an SCP]]] guide explains how to conceive, write, format, and post an SCP. Short answer: You can make an account on the [http://scpsandbox2.wikidot.com/ sandbox wiki], post your drafts there, and  share the link with people on the forums and the Realtime Chat. When you're satisfied that you've received enough feedback, go ahead and post it. Or, you can take the plunge and just post it directly to the wiki, with no feedback. This is the best way to get a lot of feedback really fast, with the downside of not having anyone to catch glaring errors for you. But the worst that'll happen is downvotes and deletion.
 
-**My application has been rejected and I... uhm.. The paragraph directly above this one is probably why, isn't it?** Yup. No password, no join. It's not a joke.
+**There's already one or more SCPs really similar to my idea! What do I do?** Write something else. Or, if you think you can, write your idea differently so that it's actually unique. Also, good.
 
-**Can I reapply?** Of course! Simply go to 'my account' and withdraw your application, then apply again.
+**But I can't think of a new idea! What do I do?** Relax. Don't panic. Inspiration will come to you eventually. Many of our writers go months without posting anything, simply because the inspiration isn't there. And that's fine. For more on getting ideas, see "Developing Thoughts" in [[[How To Write An SCP]]]. Also, check out the various challenges in the forums, or ask around in chat. There are always people with ideas that they just don't have time to write up.
 
-**I totally put the passwords in, but you still denied me!** Well, either you missed something somewhere, or you tried to get cutesy with your passwords and so I missed it. Seriously, just tuck those two words at the end of your application, don't try and weave it in.
+**How do I know if there is already one or more SCPs really similar to my idea?** If you can't be arsed to search the site, ask around in chat. Someone will know.
 
-**So, I want to write an SCP or story, what canon do I have to keep in mind?** Nothing. Or everything. See, we have a saying here at the Foundation wiki. 'There is no Canon.' What this basically means is that, when writing your article, you are free to pick and choose what you use. For example, some of us believe the Foundation is a force for good, protecting humanity from things they wouldn't understand. Others believe the Foundation is evil, hurting people just because they can.
- 
-D-class is another good example. The standard belief is that D-class are killed at the end of every month, and are culled from the scum of the earth. However, there are a lot of variations from this. The Foundation spreads across the earth, so there are bound to be a lot of political dissidents given to us from bad countries. Or do we use clones from SCPs? And ARE D-class killed at the end of every month or do we just tell researchers that so they don't object to subjecting these people to horrible things? Which class of amnesiacs are the strongest? These are all questions that you can answer.
+**How is the number for my new SCP chosen?** Just pick an empty one and fill it. Some people prefer to take the next available slot, some don't. Up to you.
 
-Another good example: Telekill. I hate it, can't stand the stuff. So, when I write my articles, they're written in a universe where telekill doesn't exist, and as such is not used in containment. 
+**Can I kill SCP-XXX?** Of course you can. In a story, not in an article. Anything can happen in your stories, because there is no canon.
 
-So, while TONE may be canon, actual details are generally open for exploration. Just because, say, someone has written a story where 343 claims he can't do anything to 682, doesn't mean you can't write a story where he always wails on the reptile like no ones business. 
+**I keep hearing that phrase, 'There is no canon'. What does it mean?** It means that none of the stories, and not even all the articles, have to be considered when writing your own article. It's perfectly okay to ignore what's been written. Of course, if you take things too far off the concept, your article may be downvoted into oblivion. 
 
-About the only thing that IS canon is how certain characters act. Gears has no emotions. Bright is bound to 963. Strelnikov hates Chechens.  You don't have to use previously written characters, but if you do, and you write them out of character people will likely pick it apart.
+**What are examples of going "off concept"?** Think of it this way: //tone// is canon, but the actual details are generally open for exploration. Just because, say, someone has written a story where [[[SCP-343]]] claims he can't do anything to [[[SCP-682]]], doesn't mean you can't write a story where he always whales on the reptile like nobody's business. But if you write this in a style or tone that doesn't fit what's already on the site - like making 682 a wacky mutant elephant, and adding a Mary Sue version of [[[http://www.scp-wiki.wikidot.com/scp-076|SCP-076-2]]] who can shoot Goku's Spirit Bomb - then we're going to downvote. Also, try to keep your characters in character. Gears doesn't display emotion. Bright is bound to [[[SCP-963]]]. Rights is a mother. Mann is willing to go to extremes for the sake of research. Gerald is highly accident-prone. You don't have to use previously written characters, but if you do, and you write them out of character, people will likely be unhappy.
 
-**What happened to SCP-XXX?** See the [[[Deletions Guide]]].
+**Do all D-class //really// get terminated at the end of the month? Are they really all death row inmates? Isn't //that// canon?** Not quite. Yes, writers agree that in-universe, these beliefs are standard. However, many writers believe that this is just a "party line" told to researchers so they don't object to subjecting these people to horrible things. Many believe that D-class are not killed at the end of the month, but instead mind-wiped and reassigned to another site. Or that the Foundation clones them using SCPs. Or that the Foundation adds political dissidents, homeless people, or people from third-world countries to the ranks of D-Class. It's up to you what explanation you choose.
 
-**How should I react when people tell me to shut up or stop?** Shut up. Or Stop. Seriously.
+**Which class of amnesiacs are the strongest?** Up to you. Different articles have different takes on this. Some articles say Class A is the strongest, some say Class A is the weakest, and some articles use alternate classification systems or don't specify.
 
-**I could use some pictures to inspire me. Y'got anything?** Right [[[http://scp-wiki.wikidot.com/composite-sketches-illustrations-and-photographs |here!]]]
+**How do you spell "amensiac"?** Up to you. See above. Examples that have been used multiple times by other articles include "amnesiac", "amnesic", and "amnestic".
 
-**There sure are a lot of facilities and Mobile task forces. Where can I find a list of them?** Well, there is no TRUE master list. We started listing them, but then there got to be SO many, we just said 'fuck it. ' What we have is [[[secure-facilities-locations |Facilities]]] and [[[task-forces |Task Forces]]].
+**My article/story/whatever is very similar to another article/story/whatever. Can I still post it?** As long as it's sufficiently different to be new and exciting. Otherwise, it is likely to be deleted.
 
-**So I have this great idea to make an article better, I can just dive in and change whatever I want, right?** Absolutely not. While this is a wiki, we're a little bit more strict on who can edit what then most wikis. Spelling is generally okay. Grammar... if it's something that doesn't change intent, it's okay, but not everyone has perfect grammar. Adding, taking away, or otherwise altering any article is not okay, without consent from the author or senior staff if the author is missing.
+**Can I cross test other SCPs in my article?** There's no rules against cross-testing, but we don't like it. These are dangerous items we're working with. Most of them act bizarrely enough on their own, and now you want to combine them to see what happens? This ranges from "bad idea" to "extremely dangerous". Plus, cross-testing doesn't usually add to the quality of a piece. You CAN do it, but if you do, you better do it well, and if you are doing it with [[[SCP-682]]] or [[[SCP-173]]] or another popular SCP, the odds that you are doing it well are somewhere between zero and zero.
+
+**I get it that you don't like cross testing SCPs, but what about just referencing other SCPs I like in my article?** If you're going to crosslink for other reasons, keep in mind that a crosslink should //add// something interesting to the article, and it should make sense in context of the article. A short list of bad reasons to crosslink:
+* To try this SCP on this other SCP just to see what will happen! (See previous Q).
+* To show that your SCP is better than this other SCP
+* To show that your SCP is kind of like this other SCP
+* To show that your SCP is (or might be) somehow related to this other, more popular SCP, written by another author
+* To say that 'SCP-████ should never come into contact with SCP-███'. (Everyone knows that SCPs shouldn't come into contact with each other.)
+
+**What is a -D?** [[[http://www.scp-wiki.wikidot.com/decommissioned-scp|A decommissioned article.]]] One that was so bad, we couldn't just delete it, but had to actively put it out of its misery.
+
+**What is a -ARC?** [[[http://www.scp-wiki.wikidot.com/archived-scps|An archived SCP]]]. One that might not be real good, but is kept around because either the Senior Staff like it, or it has been used in other stories. NOTE: -ARCs are much rarer these days, so don't think that by using an SCP in a story you can save it from deletion.
+
+**What is a -EX?** [[[http://www.scp-wiki.wikidot.com/scp-ex|An "explained" SCP]]]. This is a particular genre of SCP that addresses phenomena that would once have been considered inexplicable or unnatural, but for which regular science later developed an explanation. Read through the extant -EXs to get an idea of what they look like.
+
+**What is a -J?** [[[http://www.scp-wiki.wikidot.com/joke-scps|A joke SCP]]]. The main rule about -J's is that they have to be funny. Once upon a time we allowed SCP-ified versions of things from other fictions as -J's, but that got cut out during the mass edit. A -J has to be funny, not just a failed regular SCP.
+
+**Can I decommission an SCP?** No. Decomms are special occasions, and generally, decomms no longer fit the theme of the site.
+
+**Can I use something from an anime/tv show/movie/comic book/something else I'm into as an SCP?** No. SCPs must be original. If your idea is "An X from Y," you're probably going about things the wrong way.
+
+**Is an SCP's Object Class a community decision, or entirely up to the creator of the SCP?** Object Classes have specific definitions, found on the [[[SCP Object Classes]]] pages. Try to assign your SCP the Object Class that best fits. If you're not sure what class your SCP falls under, there's nothing wrong with asking.
+
+**What exactly is Procedure 110-Montauk?** Let's ask the experts, shall we?
+> An amateur shadowcast of the Rocky Horror picture Show.
+
+> Giving SCP-231 a plate of the driest chocolate chip cookies - with no milk. All the rest of the people required by the containment procedures watch and laugh at her.
+
+> Well, you see, first you [REDACTED] until the elephant begins to trumpet, spurting the [REDACTED] holding her upside down over a bed of live cobras, wherein [REDACTED] but you have to make sure you do it no more then three [REDACTED] Barbra Streisand's Greatest Hits [REDACTED] over seventeen feet long, but that's not the worst part, because the staple remover [REDACTED] make absolutely sure that the feather boa is black and not dark blue, or else you risk [REDACTED] followed by the plutonium splitting the atom, until [REDACTED] and that's it, really.
+
+Here's the deal. It's never said, and the author has laughed in the face of everyone whose asked. Remember: whatever you think happened to her, //you're// the one that did it. It came out of your head. You're the bastard torturing this poor girl. //That// is the fundamental nature of the page.
+
+**[[[SCP-173]]] is totally based on the weeping angels, right?** No, actually! 173 came out a couple of months before the weeping angels. And way before the Endermen.
+[[/tab]]
+
+[[tab Critique]]
++++ About Critique
+
+**Why are you guys so mean?** We aren't actually mean, //per se//. We tend to be straightforward, we don't sugarcoat, and have little tolerance for stupidity. If this is something you can't handle, it's likely that this is not the site for you.
+
+**Are there "right" and "wrong" ways to give criticism on an article?** Yes. Don't be an asshole. You don't have to say nice things, but focus your criticism on the article. Don't attack the author. It's fair not to go in depth (such as a post of "meh"). If you do go in-depth, make sure your criticism is //helpful.// For the long version of this answer, read [[[http://www.scp-wiki.wikidot.com/forum/t-516551/criticism:a-change-in-policy|this post]]] drafted by the site administration.
+
+**Okay, someone responded to my new article by saying 'Meh'. How is that considered constructive criticism?** "Meh" generally translates to: "This is an overall lackluster idea, presented in such a way as to actively emphasize its mediocrity. It is theoretically possible that a rewrite for tone and the addition of materials intended to up the ante of the article could bring about improvement, but I find it unlikely. So unlikely, in fact, that I'm not quite willing to go on the record saying so, and prefer to remain noncommittal. Chances are the boring concept makes this one unsalvageable. One out of ten."
+
+**Why are people criticizing/downvoting my article or idea?** Because they don't like it. Just because you think an idea is going to be great doesn't mean it is. Do //not// develop the idea that you're being persecuted or belittled; that attitude is very poorly received here, as is usually true elsewhere. If you can't handle being told something of yours sucks, this isn't the right site for you.
+
+**What are some things that generally cause an article to accumulate downvotes?** That's like asking how many shades of gray exist. Everyone has a different reason for downvoting. But, some simple reasons: Bad grammar, poor writing, doing something that's already an SCP, or failing to write in the tone of the Foundation. Or simply because they don't like it.
+[[/tab]]
+
+[[tab Wiki Etiquette]]
++++ About Wiki Etiquette
+
+**What happens when I write a SCP article/story/creepypasta that people don't like?** Once it hits -10, a member of senior staff will call for a deletion on the article's discussion page. If they can get three other members of Senior Staff to agree to it, the page is deleted. If there is discussion, and someone thinks it can be saved, we go from there. See the [[[Deletions Guide]]] for more information.
+
+**Is there a penalty for having an article deleted?** Absolutely none.
+
+**Can I put my article back up after it has been deleted?** Yes, as long as you have sufficiently edited the article to make it better. While some ideas are better off just leaving to die, some just need a lot of work.
+
+**How many times am I allowed to repost an SCP/story idea that got deleted?** As many times as you can rewrite it to improve it. Never post the same deleted version.
+
+**Can I upvote my article to prevent it being deleted?** No, not unless someone has maliciously downvoted your article. If this is the case, bring the malicious downvote to staff's attention.
+
+**Can I downvote the articles by someone I don't like just to make a point?** No, and don't be an asshole. This is called 'malicious downvoting' and is against the rules.
+
+**Man, I really want to delete my own article. Can I do it myself, or do I have to wait for it to hit -10 and for the four senior staff/mods to agree to delete it?** You are always free to delete your own work, no matter the vote. Just make sure you're actually deleting it, and not just renaming it. To delete a page you created, click the "+Options" link at the bottom of the page, and select delete. Make sure you check the "delete completely" box, though, or you'll just rename the page and piss us all off. Read the [[[Deletions Guide]]] for details.
+
+**Where do deleted pages go?** Oblivion. Wikidot doesn't cache deleted pages in any form, including the discussion pages. If you want to back up your own work and/or any critiques you received from it, it's entirely up to you to do so. We don't keep them around because we don't want to clutter up the site with sub par articles that never go away.
+
+**So I have this great idea to make an article better, I can just dive in and change whatever I want, right?** Absolutely not. While this is a wiki, we're a little bit more strict on who can edit what than most wikis. Spelling is generally okay. Grammar... if it's something that doesn't change intent, it's okay, but not everyone has perfect grammar. Adding, taking away, or otherwise altering any article is not okay without consent from the author, or from senior staff if the author is missing.
+
+//If you've read the required reading, make sure to include the words 'Twisted Fire' in your application, along with everything else you've been told to put in.//
+
+**My application has been rejected and I... uhm.. The paragraph directly above this one is probably why, isn't it?** Yup. No password, no join. It's not a joke. 
+
+**Can I reapply?** Of course! Simply go to 'my account' and withdraw your application, then apply again. 
+
+**I totally put the passwords in, but you still denied me!** Well, either you missed something somewhere, or you tried to get cutesy with your passwords and so I missed it. Seriously, just tuck those words at the end of your application, don't try and weave it in.
+
+**Is it kosher to go through and comment on every article?** No. Commenting on every older article is just going to piss staff off, especially if you post on a whole lot of old article threads at once. If you downvote and feel you have something significant to add in explanation, sure. And you don't need to comment on every single article. Trust us.
+
+**Do we have to ask permission to use other authors' characters and SCPs in our stories?** No, you don't. But it's better to ask, especially if you want to get their SCPs or characters right.
+[[/tab]]
+
+[[tab Chat Etiquette]]
++++ About Chat Etiquette
+
+**Hey, I'm running this idea by the chat and no one is looking at it. What should I do?** Wait a bit, then try again. The chat doubles as a social hangout, so it may take a while to get people's attention. Whatever you do, don't spam your link. It just pisses people off.
+
+**Oh no there is a troll! What do I do?** Whether it's a troll or a spammer, don't feed them. Meaning, don't respond to them. Both want attention. Don't give it to them. But, if you have to do something, ping a channel operator - they just may have not noticed it.
+
+**hay is it ok if i tak liek dis lol** We will hunt you down, make sure you never have children, and then break all your fingers to keep you away from the internet. We are all adults here, or damn close to, so let's type like it.
+
+**So I get that spamming the chat with something is bad, but what exactly constitutes spamming?** Basically, if you're reposting the same link or question several times in quick succession, it's spamming. It's like awkwardly trying to cut into a conversation by shouting "SO DOES ANYONE ELSE LIKE ASPARAGUS" until someone answers or tells you to shut it. Maybe they //do// like asparagus. Maybe they really, really do. Thing is, if you keep screaming about it, nobody's going to want the asparagus you're offering. Keep your links and such under control, and you'll do fine.
+[[/tab]]
+
+[[tab Staff Etiquette]]
++++ About Staff Etiquette
+
+**Who are the Senior Staff?** They're the people under the Senior Staff tab in [[[The Guide to Newbies]]]. Senior Staff are the people who run the site. They've been around for a while, have some good articles, and generally know what they're talking about. And remember: //you are required to know who they are when you encounter them//. There are four levels of Senior Staff:
+# Just plain Senior Staff have no extra powers, besides the ability to vote for article deletion. They act as role models and teachers, trying to help people. 
+# Mods are the next step up, and help keep the general populace in check. 
+# Admins are the ones who run the Site. 
+# Finally, there's the Owner, Dr. Gears. If there is dissension in the ranks, his decisions are final.
+
+**No mods are around! Who are some people to ask for help?** It might actually be better if you just waited until a member of Senior Staff was around. Nothing on this site is especially time sensitive, but if you really need help, send a wikidot PM to someone. Several of us check their computers multiple times over the course of the day, so don't be afraid to write.
+
+**Can we ask why so-and-so was banned?** Yes, you may.
+[[/tab]]
+
+[[tab Harsh Answers]]
++++ Honest But Brutal Answers To Further Questions
+
+> **This tab is not required reading.** If you are newly applying for site membership, you are not required to read this. If you continue... brace yourself. This is the honest but brutal answers section, written by our most honest yet brutal mods and admins. You have been warned.
+
+**<Bright | Yoric | Echo | Other Member> is being mean to my article!?** Yes, and? Did you actually read the FAQ section on "Critique"? Are they breaking any rules?
+
+**No, but I want them to stop!** It's not going to happen. That's just how we are. If we actually are being mean, and you aren't just misreading our sarcasm, there's a reason for it. The reason is you're a moron. Maybe you should get some help with that?
+
+**I put my SCP up for review and not that many people responded. Then I posted it and it was rejected. Can I blame other people for its failure?** HAHAHAHAHAno. Seriously, deleted SCPs are a part of life. Deal.
+
+**But, we're like, totally an amazing member of this other community, and we have so many ideas to improve the site! Why is everyone being a jerk when we tell them how they should be doing things?** Because we don't know you from Adam. Or Eve. Or Steve, Adam's gay roommate. We're old coots, set in our ways, because they work. If you do have an idea, don't feel like you can't send it past us, but don't be disappointed when it gets shot down. And, when someone tells you no, that is not permission to go ahead and do it anyways. If you expect to come in and be instantly recognized for the genius you are, not only will you be severely disappointed, BUT! This might not be the right site for you.
+
+**I have an awesome site and am currently the admin there. May I please have admin here?** No. We do not know who you are. We do not know your site. We do not care if you are those guys from Penny Arcade, when you join up here, you start at the bottom. Eventually, if you're not a moron, you might move up. But we doubt it.
+
+**I own an IRC channel on the synIRC network and it is quite successful. May I please have admin in our chat?** Fuck no. Stop being stupid.
+
+**When a mod says "Stop" they mean, "Talk louder and more stupid", right?** Were you dropped on your head a lot as a child, while eating paint chips, underneath powerlines? If a member of the Senior Staff tells you to stop, you stop, then and there. You are more than welcome to PM them to ask why you have to stop, as long as you understand that when they say a conversation is over - it's over.
+
+**Hey, those decomms are pretty funny. Can I write a shitty article just so you can decomm it?** No. No, no, no, no, no. Did we mention no? Having an SCP so terrible that it has to be decommissioned is NOT a good thing. One of the reasons we don't do them anymore is because people wanted to gain infamy. Also, don't be a fuckwit.
+[[/tab]]
+
+[[/tabview]]
