Updated faq (no message)

--- a/faq.txt
+++ b/faq.txt
@@ -155,7 +155,7 @@ Here's the deal. It's never said, and the author has laughed in the face of ever
 [[tab Staff Etiquette]]
 +++ About Staff Etiquette
 
-**Who are the Senior Staff?** They're the people under the Senior Staff tab in [[[guide-to-newbies|guide-to-newbies|The Guide to Newbies]]]. Senior Staff are the people who run the site. They've been around for a while, have some good articles, and generally know what they're talking about. And remember: //you are required to know who they are when you encounter them//. There are four levels of Senior Staff:
+**Who are the Senior Staff?** They're the people under the Senior Staff tab in [[[guide-to-newbies|The Guide to Newbies]]]. Senior Staff are the people who run the site. They've been around for a while, have some good articles, and generally know what they're talking about. And remember: //you are required to know who they are when you encounter them//. There are four levels of Senior Staff:
 # Just plain Senior Staff have no extra powers, besides the ability to vote for article deletion. They act as role models and teachers, trying to help people. 
 # Mods are the next step up, and help keep the general populace in check. 
 # Admins are the ones who run the Site. 
