Updated faq (no message)

--- a/faq.txt
+++ b/faq.txt
@@ -150,6 +150,8 @@ Here's the deal. It's never said, and the author has laughed in the face of ever
 **hay is it ok if i tak liek dis lol** We will hunt you down, make sure you never have children, and then break all your fingers to keep you away from the internet. We are all adults here, or damn close to, so let's type like it.
 
 **So I get that spamming the chat with something is bad, but what exactly constitutes spamming?** Basically, if you're reposting the same link or question several times in quick succession, it's spamming. It's like awkwardly trying to cut into a conversation by shouting "SO DOES ANYONE ELSE LIKE ASPARAGUS" until someone answers or tells you to shut it. Maybe they //do// like asparagus. Maybe they really, really do. Thing is, if you keep screaming about it, nobody's going to want the asparagus you're offering. Keep your links and such under control, and you'll do fine.
+
+**In the [[[Chat Guide]]], you tell us to avoid talking about politics and religion and firearms and My Little Pony. Why?** Simply put, these topics tend to overwhelm all other conversation when they come up. People have strong opinions or feelings about these topics. This makes talking about them a good way to start a flame war. At best, these topics just make it impossible for other people to get in a word edgewise about anything else. Things like the SCP wiki and its related works, or feedback sessions on users' sandbox drafts.
 [[/tab]]
 
 [[tab Staff Etiquette]]
